--- a/.github/workflows/docker-hub-publish.yml
+++ b/.github/workflows/docker-hub-publish.yml
@@ -23,7 +23,7 @@ jobs:
         uses: docker/build-push-action@v2.5.0
         with:
           context: .
-          file: ./docker/Dockerfile-debian
+          file: ./docker/Dockerfile-ubuntu-20.04
           tags: imiobe/iadelib:buster-latest
           pull: true
           push: true
