--- a/docker/Dockerfile-ubuntu-20.04
+++ b/docker/Dockerfile-ubuntu-20.04
@@ -1,16 +1,11 @@
 FROM imiobe/plone-base:4.3.20-ubuntu as builder
 
-ENV DELIB_MAJOR=4.1 \
-    DELIB_VERSION=4.1.19 \
-    ZC_BUILDOUT=2.13.1 \
-    SETUPTOOLS=40.8.0 \
-    PIP=20.2.2
-
-ARG PROFILE="communes.cfg restapi.cfg"
+ARG PROFILE="communes.cfg"
 
 WORKDIR /
 USER root
-RUN apt-get update \
+RUN add-apt-repository ppa:libreoffice/libreoffice-still \
+  && apt-get update \
   && apt-get full-upgrade -qqy \
   # needed because of jre installation bug https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=863199#23
   && mkdir -p /usr/share/man/man1 \
@@ -19,7 +14,6 @@ RUN apt-get update \
      libreoffice \
      libreoffice-script-provider-python \
      file \
-     python2.7 \
      imagemagick \
      graphicsmagick \
      ghostscript \
@@ -31,17 +25,19 @@ RUN apt-get update \
      libpng16-16 \
      libopenjp2-7 \
      libldap-2.4-2 \
+     ldap-utils \
      libwebp6\
      libpq5 \
      lbzip2 \
+     librsvg2-bin\
      libsigc++-2.0-0v5 \
-  && apt-get purge -qqy libreoffice-gnome libreoffice-gtk* libreoffice-help* libreoffice-kde* \
+  && apt-get purge libreoffice-gnome libreoffice-gtk* libreoffice-help* libreoffice-kde* \
   && buildDeps="build-essential \
+                python-dev-is-python2 \
                 cmake \
                 make \
                 wget \
-                python2.7-dev \
-                virtualenv \
+                python3-pip \
                 libpq-dev \
                 libreadline-dev \
                 gcc \
@@ -58,45 +54,41 @@ RUN apt-get update \
                 libldap2-dev \
                 libwebp-dev \
                 libsasl2-dev \
+                libldap2-dev \
                 libsigc++-2.0-dev" \
   && apt-get install -qqy --no-install-recommends $buildDeps \
   && rm -rf /var/lib/apt/lists/* \
+  && pip install "virtualenv>=20.7.2" \
   && gem install docsplit \
   && wget -nv -O /home/imio/zint.tar.gz https://sourceforge.net/projects/zint/files/zint/2.9.1/zint-2.9.1-src.tar.gz/download \
   && tar -x -C /home/imio -f /home/imio/zint.tar.gz \
-  && cd /home/imio/zint* \
-  && cmake . \
-  && make \
-  && make install
+  && cd /home/imio/zint-* \
+  && cmake --log-level=ERROR . \
+  && make --quiet \
+  && make --quiet install
 
 WORKDIR /plone
 
-COPY --chown=imio *.cfg *.conf requirements.txt Makefile standard-config.py /plone/
+COPY --chown=imio *.cfg *.conf requirements.txt Makefile /plone/
 
 RUN sed -i "s/\${buildout:directory}\/var/\/data/g" *.cfg \
   && echo "[buildout]" > buildout.cfg \
   && echo "extends =" >> buildout.cfg \
   && echo "    $PROFILE" >> buildout.cfg \
   && echo "    amqp.cfg" >> buildout.cfg \
-  && echo "    solr.cfg" >> buildout.cfg \
   && echo "    ldap.cfg" >> buildout.cfg \
-  && echo "    restapi.cfg" >> buildout.cfg \
   && echo "    docker.cfg" >> buildout.cfg \
-  && su -c "virtualenv -p python2.7 ." -s /bin/sh imio \
-  && su -c "bin/pip install pip==$PIP setuptools==$SETUPTOOLS zc.buildout==$ZC_BUILDOUT" -s /bin/sh imio \
+  && su -c "virtualenv -p python2 ." -s /bin/sh imio \
+  && su -c "bin/pip install -r requirements.txt" -s /bin/sh imio \
   && su -c "bin/buildout -t 30 -N" -s /bin/sh imio \
-  && rm -rf develop-eggs/ src/ var/filestorage/ var/blobstorage/
+  && rm -rf develop-eggs/ src/ var/blobstorage/ var/filestorage/
 
 FROM imiobe/plone-base:4.3.20-ubuntu
-ENV DELIB_MAJOR=4.1 \
-    DELIB_VERSION=4.1.19 \
-    ZC_BUILDOUT=2.13.1 \
-    SETUPTOOLS=40.8.0 \
-    PIP=20.2.2
+ENV DELIB_MAJOR=4.2
 
 LABEL delib=$DELIB_VERSION \
       name="ia.Delib" \
-      description="ia.Delib image, based on imiobe/plone-base:4.3.20-ubuntu" \
+      description="ia.Delib image, based on imiobe/plone-base:4.3.20-debian" \
       maintainer="iMio"
 
 COPY --from=builder /usr/local/lib/python2.7/dist-packages /usr/local/lib/python2.7/dist-packages
@@ -105,19 +97,19 @@ COPY --from=builder /usr/local/include/zint.h /usr/local/include/
 COPY --from=builder /usr/local/bin/zint /usr/local/bin/
 
 COPY --chown=imio --from=builder /plone /plone/
-COPY --chown=imio docker/docker-initialize.py docker/docker-entrypoint.sh /plone/
-COPY --chown=imio config /plone/config
+COPY --chown=imio docker/docker-initialize.py docker/docker-entrypoint.sh docker/update-admin-password.py /plone/
 
-RUN apt-get update \
+RUN add-apt-repository ppa:libreoffice/libreoffice-still \
+  && apt-get update \
   && apt-get full-upgrade -qqy -q \
   # needed because of jre installation bug https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=863199#23
   && mkdir -p /usr/share/man/man1 \
   && apt-get install -qqy --no-install-recommends \
+     python-is-python2 \
      default-jre \
      libreoffice \
      libreoffice-script-provider-python \
      file \
-     python2.7 \
      imagemagick \
      graphicsmagick \
      ghostscript \
@@ -129,6 +121,7 @@ RUN apt-get update \
      libpng16-16 \
      libopenjp2-7 \
      libldap-2.4-2 \
+     ldap-utils \
      libwebp6\
      libpq5 \
      lbzip2 \
@@ -136,17 +129,18 @@ RUN apt-get update \
   && apt-get purge libreoffice-gnome libreoffice-gtk* libreoffice-help* libreoffice-kde* \
   && rm -rf /var/lib/apt/lists/* \
   && gem install docsplit \
-  && bin/pip install pip==$PIP setuptools==$SETUPTOOLS zc.buildout==$ZC_BUILDOUT \
+  && bin/pip install -r requirements.txt \
   && chmod +x /plone/docker-entrypoint.sh
 
 WORKDIR /plone
 
 USER imio
 
-ENV ZEO_HOST=db \
- ZEO_PORT=8100 \
- HOSTNAME_HOST=local \
- PROJECT_ID=plone
+ENV ZEO_ADDRESS=zeo:8100 \
+ OO_SERVER=libreoffice \
+ OO_PORT=2002 \
+ USE_STREAM=False \
+ CUSTOM_TMP=/var/tmp
 
 EXPOSE 8081
 ENTRYPOINT ["/plone/docker-entrypoint.sh"]
