--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,4 @@ wheel
 # mccabe fails to install during buildout?
 mccabe==0.6.1
 # python-ldap not available in OS package index ?
-# python-ldap
+python-ldap
