--- a/docker/Dockerfile-dev
+++ b/docker/Dockerfile-dev
@@ -80,3 +80,4 @@ RUN sed -i "s/\${buildout:directory}\/var/\/data/g" *.cfg \
   && rm -rf develop-eggs/ src/ var/blobstorage/ var/filestorage/
 
 USER imio
+ENTRYPOINT ["bash"]
