--- a/docker/Dockerfile-dev
+++ b/docker/Dockerfile-dev
@@ -75,7 +75,7 @@ RUN sed -i "s/\${buildout:directory}\/var/\/data/g" *.cfg \
   && echo "    ldap.cfg" >> buildout.cfg \
   && echo "    docker.cfg" >> buildout.cfg \
   && su -c "virtualenv -p python2 ." -s /bin/sh imio \
-  && su -c "bin/pip install -r requirements.txt" -s /bin/sh imio \
+  && su -c "bin/pip install python-ldap -r requirements.txt" -s /bin/sh imio \
   && su -c "bin/buildout -t 30 -N" -s /bin/sh imio \
   && rm -rf develop-eggs/ src/ var/blobstorage/ var/filestorage/
 
