--- a/docker/Dockerfile-ubuntu-20.04
+++ b/docker/Dockerfile-ubuntu-20.04
@@ -79,7 +79,7 @@ RUN sed -i "s/\${buildout:directory}\/var/\/data/g" *.cfg \
   && echo "    ldap.cfg" >> buildout.cfg \
   && echo "    docker.cfg" >> buildout.cfg \
   && su -c "virtualenv -p python2 ." -s /bin/sh imio \
-  && su -c "bin/pip install -r requirements.txt" -s /bin/sh imio \
+  && su -c "bin/pip install python-ldap -r requirements.txt" -s /bin/sh imio \
   && su -c "bin/buildout -t 30 -N" -s /bin/sh imio \
   && rm -rf develop-eggs/ src/ var/blobstorage/ var/filestorage/
 
@@ -129,7 +129,7 @@ RUN add-apt-repository ppa:libreoffice/libreoffice-still \
   && apt-get purge libreoffice-gnome libreoffice-gtk* libreoffice-help* libreoffice-kde* \
   && rm -rf /var/lib/apt/lists/* \
   && gem install docsplit \
-  && bin/pip install -r requirements.txt \
+  && bin/pip install python-ldap -r requirements.txt \
   && chmod +x /plone/docker-entrypoint.sh
 
 WORKDIR /plone
