--- a/docker-dev.cfg
+++ b/docker-dev.cfg
@@ -47,6 +47,8 @@ zcml =
 
 [instance-async]
 debug-mode = off
+environment-vars =
+    ZC_ASYNC_UUID /data/async-uuid.txt
 
 [instance-cron]
 <= instance1
