--- a/docker/Dockerfile-ubuntu-20.04
+++ b/docker/Dockerfile-ubuntu-20.04
@@ -88,11 +88,11 @@ ENV DELIB_MAJOR=4.2
 
 LABEL delib=$DELIB_VERSION \
       name="ia.Delib" \
-      description="ia.Delib image, based on imiobe/plone-base:4.3.20-debian" \
+      description="ia.Delib image, based on imiobe/plone-base:4.3.20-ubuntu-20.04" \
       maintainer="iMio"
 
 COPY --from=builder /usr/local/lib/python2.7/dist-packages /usr/local/lib/python2.7/dist-packages
-COPY --from=builder /usr/local/lib/libzint.so.2.9.0 /usr/local/lib/libzint.so.2.9 /usr/local/lib/libzint.so /usr/local/lib/
+COPY --from=builder /usr/local/lib/libzint.so* /usr/local/lib/
 COPY --from=builder /usr/local/include/zint.h /usr/local/include/
 COPY --from=builder /usr/local/bin/zint /usr/local/bin/
 
