do not limit parts in docker-dev.cfg

--- a/docker-dev.cfg
+++ b/docker-dev.cfg
@@ -1,12 +1,5 @@
 [buildout]
-parts =
-    omelette
-    repozo
-    facts
-    zeoserver
-    instance1
-    instance-amqp
-    instance-async
+parts +=
     instance-cron
 
 [zeoserver]
