--- a/docker.cfg
+++ b/docker.cfg
@@ -1,5 +1,13 @@
 [buildout]
 extends =
     docker-dev.cfg
-parts +=
+parts =
+    omelette
+    repozo
+    facts
+    zeoserver
+    instance1
+    instance-amqp
+    instance-async
+    instance-cron
     instance-debug
