Add missing amqp variables

--- a/docker-dev.cfg
+++ b/docker-dev.cfg
@@ -1,5 +1,6 @@
 [buildout]
 parts +=
+    instance
     instance-cron
 
 [zeoserver]
@@ -42,6 +43,9 @@ zcml =
 debug-mode = off
 environment-vars =
     ZC_ASYNC_UUID /data/async-uuid.txt
+
+[instance]
+<= instance1
 
 [instance-cron]
 <= instance1
