--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -50,7 +50,6 @@ services:
       - ADMIN_PASSWORD=admin
       - CLUSTER=iadelib_pm42
       - MOUNTPOINT
-      - ACTIVE_BIGBANG=False
     volumes:
       - ./data:/data
       - tmp:/tmp
@@ -102,7 +101,6 @@ services:
       - ADMIN_PASSWORD=admin
       - CLUSTER=iadelib_pm42
       - MOUNTPOINT
-      - ACTIVE_BIGBANG=False
     volumes:
       - ./data:/data
       - tmp:/tmp
@@ -116,6 +114,7 @@ services:
     command: instance-amqp
     networks:
       - zeo
+      - ex
     depends_on:
       - zeo
       - worker-cron
@@ -131,7 +130,10 @@ services:
       - MQ_WS_URL
       - MQ_WS_LOGIN
       - MQ_WS_PASSWORD
-      - ACTIVE_BIGBANG=False
+      - MQ_HOST
+      - MQ_PORT
+      - MQ_LOGIN
+      - MQ_PASSWORD
     volumes:
       - ./data:/data
       - tmp:/tmp
