--- a/.github/workflows/docker-hub-publish-4.1.yml
+++ b/.github/workflows/docker-hub-publish-4.1.yml
@@ -25,10 +25,12 @@ jobs:
         uses: docker/build-push-action@v2.5.0
         with:
           context: .
-          file: ./docker/Dockerfile-debian
+          file: ./docker/Dockerfile-ubuntu-20.04
           tags: imiobe/iadelib:4.1-latest
           pull: true
           push: true
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
       - name: Build dev image
         uses: docker/build-push-action@v2.5.0
         with:
@@ -37,3 +39,5 @@ jobs:
           tags: imiobe/iadelib:4.1-dev
           pull: true
           push: true
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
