--- a/docker.cfg
+++ b/docker.cfg
@@ -1,12 +1,13 @@
-[zeoserver]
-file-storage = /data/filestorage/Data.fs
-blob-storage = /data/blobstorage
-
-[instance1]
-blob-storage = /data/blobstorage
-shared-blob = on
-zeo-address = $(ZEO_ADDRESS)
-
-[instance-async]
-zeo-address = $(ZEO_ADDRESS)
-debug-mode = off
+[buildout]
+extends =
+    docker-dev.cfg
+parts =
+    omelette
+    repozo
+    facts
+    zeoserver
+    instance
+    instance-amqp
+    instance-async
+    instance-cron
+    instance-debug
