--- a/docker/Dockerfile-ubuntu-20.04
+++ b/docker/Dockerfile-ubuntu-20.04
@@ -1,15 +1,15 @@
-FROM imiobe/plone-base:4.3.20-debian as builder
+FROM imiobe/plone-base:4.3.20-ubuntu as builder
 
 ARG PROFILE="communes.cfg"
 
-WORKDIR /
+WORKDIR /plone
 USER root
-RUN apt-get update \
+COPY --chown=imio *.cfg *.conf requirements.txt Makefile /plone/
+RUN add-apt-repository -yu ppa:libreoffice/libreoffice-still \
   && apt-get full-upgrade -qqy \
-  # needed because of jre installation bug https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=863199#23
-  && mkdir -p /usr/share/man/man1 \
   && apt-get install -qqy --no-install-recommends \
-     default-jre \
+     python-is-python2 \
+     openjdk-16-jre-headless \
      libreoffice \
      libreoffice-script-provider-python \
      file \
@@ -20,24 +20,24 @@ RUN apt-get update \
      poppler-utils \
      ruby \
      libmagic1 \
-     libjpeg62-turbo \
+     libjpeg62 \
      libpng16-16 \
      libopenjp2-7 \
      libldap-2.4-2 \
-     python-ldap \
      ldap-utils \
-     libwebp6\
+     libwebp6 \
+     libgif7 \
      libpq5 \
      lbzip2 \
      librsvg2-bin\
      libsigc++-2.0-0v5 \
   && apt-get purge libreoffice-gnome libreoffice-gtk* libreoffice-help* libreoffice-kde* \
   && buildDeps="build-essential \
+                python-dev-is-python2 \
                 cmake \
                 make \
                 wget \
-                python-pip \
-                python-wheel \
+                python3-pip \
                 libpq-dev \
                 libreadline-dev \
                 gcc \
@@ -48,46 +48,43 @@ RUN apt-get update \
                 libxslt1-dev \
                 libbz2-dev \
                 libffi-dev \
-                libjpeg62-turbo-dev \
+                libjpeg62-dev \
                 libopenjp2-7-dev \
                 zlib1g-dev \
                 libldap2-dev \
                 libwebp-dev \
                 libsasl2-dev \
                 libldap2-dev \
-                python-ldap-dbg \
                 libsigc++-2.0-dev" \
-  && apt-get install -qy --no-install-recommends $buildDeps \
+  && apt-get install -qqy --no-install-recommends $buildDeps \
   && rm -rf /var/lib/apt/lists/* \
+  && pip install "virtualenv>=20.7.2" \
   && gem install docsplit \
   && wget -nv -O /home/imio/zint.tar.gz https://sourceforge.net/projects/zint/files/zint/2.10.0/zint-2.10.0-src.tar.gz/download \
   && tar -x -C /home/imio -f /home/imio/zint.tar.gz \
-  && cd /home/imio/zint* \
+  && cd /home/imio/zint-* \
   && cmake --log-level=ERROR . \
   && make --quiet \
-  && make --quiet install
-
-WORKDIR /plone
-
-COPY --chown=imio *.cfg *.conf requirements.txt Makefile /plone/
-
-RUN sed -i "s/\${buildout:directory}\/var/\/data/g" *.cfg \
+  && make --quiet install \
+  && cd /plone \
+  && sed -i "s/\${buildout:directory}\/var/\/data/g" *.cfg \
   && echo "[buildout]" > buildout.cfg \
   && echo "extends =" >> buildout.cfg \
   && echo "    $PROFILE" >> buildout.cfg \
   && echo "    amqp.cfg" >> buildout.cfg \
   && echo "    ldap.cfg" >> buildout.cfg \
   && echo "    docker.cfg" >> buildout.cfg \
-  && pip install -r requirements.txt \
-  && su -c "buildout -t 30 -N" -s /bin/sh imio \
+  && su -c "virtualenv -p python2 ." -s /bin/sh imio \
+  && su -c "bin/pip install python-ldap -r requirements.txt" -s /bin/sh imio \
+  && su -c "bin/buildout -t 30 -N" -s /bin/sh imio \
   && rm -rf develop-eggs/ src/ var/blobstorage/ var/filestorage/
 
-FROM imiobe/plone-base:4.3.20-debian
+FROM imiobe/plone-base:4.3.20-ubuntu
 ENV DELIB_MAJOR=4.2
 
 LABEL delib=$DELIB_VERSION \
       name="ia.Delib" \
-      description="ia.Delib image, based on imiobe/plone-base:4.3.20-debian" \
+      description="ia.Delib image, based on imiobe/plone-base:4.3.20-ubuntu-20.04" \
       maintainer="iMio"
 
 COPY --from=builder /usr/local/lib/python2.7/dist-packages /usr/local/lib/python2.7/dist-packages
@@ -98,12 +95,13 @@ COPY --from=builder /usr/local/bin/zint /usr/local/bin/
 COPY --chown=imio --from=builder /plone /plone/
 COPY --chown=imio docker/docker-initialize.py docker/docker-entrypoint.sh docker/update-admin-password.py /plone/
 
-RUN apt-get update \
-  && apt-get full-upgrade -qqy -q \
-  # needed because of jre installation bug https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=863199#23
-  && mkdir -p /usr/share/man/man1 \
+WORKDIR /plone
+
+RUN add-apt-repository -yu ppa:libreoffice/libreoffice-still \
+  && apt-get full-upgrade -qqy \
   && apt-get install -qqy --no-install-recommends \
-     default-jre \
+     python-is-python2 \
+     openjdk-16-jre-headless \
      libreoffice \
      libreoffice-script-provider-python \
      file \
@@ -114,23 +112,22 @@ RUN apt-get update \
      poppler-utils \
      ruby \
      libmagic1 \
-     libjpeg62-turbo \
+     libjpeg62 \
      libpng16-16 \
      libopenjp2-7 \
      libldap-2.4-2 \
-     python-ldap \
      ldap-utils \
-     libwebp6\
+     libwebp6 \
+     libgif7 \
      libpq5 \
      lbzip2 \
+     librsvg2-bin \
      libsigc++-2.0-0v5 \
   && apt-get purge libreoffice-gnome libreoffice-gtk* libreoffice-help* libreoffice-kde* \
   && rm -rf /var/lib/apt/lists/* \
   && gem install docsplit \
-  && pip install -r requirements.txt \
+  && bin/pip install python-ldap -r requirements.txt \
   && chmod +x /plone/docker-entrypoint.sh
-
-WORKDIR /plone
 
 USER imio
 
