--- a/.github/workflows/docker-hub-publish.yml
+++ b/.github/workflows/docker-hub-publish.yml
@@ -1,12 +1,41 @@
 name: Update images
-on:    
+on:
+  push:
+    branches: [ master ]
   schedule:
     - cron: '0 2 * * *' # Weekly on Sundays at 02:00
 jobs:
-  curl:
+  docker:
     runs-on: ubuntu-latest
     steps:
-    - name: curl
-      uses: wei/curl@master
-      with:
-        args: -X POST ${{ secrets.DOCKER_HUB_TRIGGER_URL }}
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      - name: Build base image
+        uses: docker/build-push-action@v2.5.0
+        with:
+          context: .
+          file: ./docker/Dockerfile-ubuntu-20.04
+          tags: imiobe/iadelib:latest
+          pull: true
+          push: true
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+      - name: Build dev image
+        uses: docker/build-push-action@v2.5.0
+        with:
+          context: .
+          file: ./docker/Dockerfile-dev
+          tags: imiobe/iadelib:dev
+          pull: true
+          push: true
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
