--- a/docker/Dockerfile-test
+++ b/docker/Dockerfile-test
@@ -1,8 +1,4 @@
-FROM imiobe/iadelib:4.1-dev
-
-ENV ZC_BUILDOUT=2.13.1 \
-    SETUPTOOLS=40.8.0 \
-    PIP=20.2.2
+FROM imiobe/iadelib:dev
 
 ARG PROFILE="communes-dev.cfg"
 ARG PR_NUM=''
@@ -11,7 +7,7 @@ ARG PR_REPO=''
 USER root
 WORKDIR /plone
 
-COPY --chown=imio *.cfg *.conf Makefile .coveragerc /plone/
+COPY --chown=imio *.cfg *.conf Makefile .coveragerc requirements.txt /plone/
 
 USER imio
 ENV PATH="/home/imio/.local/bin:${PATH}"
@@ -20,14 +16,14 @@ RUN rm -fr bin include lib local share downloads .installed.cfg \
   && echo "[buildout]" > buildout.cfg \
   && echo "extends =" >> buildout.cfg \
   && echo "    $PROFILE" >> buildout.cfg \
-  && echo "    restapi.cfg" >> buildout.cfg \
   && echo "    amqp.cfg" >> buildout.cfg \
   && echo "    ldap.cfg" >> buildout.cfg \
-  && echo "    docker.cfg" >> buildout.cfg \
+  && echo "    docker-dev.cfg" >> buildout.cfg \
   && echo "Bouildout config :" \
   && cat buildout.cfg \
-  && pip install -U pip==$PIP setuptools==$SETUPTOOLS zc.buildout==$ZC_BUILDOUT coverage coveralls \
-  && buildout -t 60 \
+  && virtualenv -p python2 . \
+  && bin/pip install -U coverage coveralls python-ldap -r requirements.txt \
+  && bin/buildout -t 60 \
   && if [ -z $PR_NUM ] || [ -z $PR_REPO ] ; \
      then echo "Argument PR_NUM or PR_REPO not provided" ; \
      else cd src/$PR_REPO \
@@ -38,3 +34,4 @@ RUN rm -fr bin include lib local share downloads .installed.cfg \
      fi
 
 WORKDIR /plone
+ENTRYPOINT ["/plone/bin/python"]
