--- a/docker-dev.cfg
+++ b/docker-dev.cfg
@@ -16,28 +16,11 @@ zope-conf-additional =
   </product-config>
   ${zope-conf:additional}
   ${zope-conf:zamqp}
-eggs =
-    ${buildout:eggs}
-    plone.app.async
-    collective.monitor
-    Products.DocFinderTab
-    Products.PloneMeeting
-# backward compat, to be removed after buildout.pm 4.1.17 is released
-    Products.PloneMeeting[amqp]
-    five.z2monitor
-    Products.ZNagios
-    zc.z3monitor
-    imio.prometheus
-    Products.MeetingCommunes
 
-zcml =
-    Products.PloneMeeting-overrides
-    five.z2monitor
-    Products.ZNagios-zcmonitor
-    zc.z3monitor
-    collective.monitor
+eggs +=
     imio.prometheus
-    Products.MeetingCommunes
+zcml +=
+    imio.prometheus
 
 [instance-async]
 debug-mode = off
@@ -62,6 +45,8 @@ zope-conf-additional =
   ${zope-conf:zamqp}
 
 eggs +=
+    imio.prometheus
     collective.big.bang
 zcml +=
+    imio.prometheus
     collective.big.bang
