--- a/versions.cfg
+++ b/versions.cfg
@@ -2,6 +2,9 @@
 zc.buildout = 2.13.1
 setuptools = 40.8.0
 
+
+imio.prometheus = 1.0.0
+
 Products.DocFinderTab = 1.0.5
 mr.developer = 2.0.0
 
@@ -9,6 +12,10 @@ Products.PloneMeeting = 4.1.28.28
 
 # profile specific versions
 Products.MeetingCommunes = 4.1.28
+
+# Required by:
+# imio.prometheus
+collective.prometheus = 1.6.0
 
 # Required by:
 # Products.PloneMeeting
