--- a/docker/Dockerfile-ubuntu-20.04
+++ b/docker/Dockerfile-ubuntu-20.04
@@ -76,7 +76,7 @@ RUN add-apt-repository -yu ppa:libreoffice/libreoffice-still \
   && echo "    ldap.cfg" >> buildout.cfg \
   && echo "    docker.cfg" >> buildout.cfg \
   && su -c "virtualenv -p python2 ." -s /bin/sh imio \
-  && su -c "bin/pip install python-ldap -r requirements.txt" -s /bin/sh imio \
+  && su -c "bin/pip install 'python-ldap==2.4.15' -r requirements.txt" -s /bin/sh imio \
   && su -c "bin/buildout -t 30 -N" -s /bin/sh imio \
   && rm -rf develop-eggs/ src/ var/blobstorage/ var/filestorage/
 
@@ -127,7 +127,7 @@ RUN add-apt-repository -yu ppa:libreoffice/libreoffice-still \
   && apt-get purge libreoffice-gnome libreoffice-gtk* libreoffice-help* libreoffice-kde* \
   && rm -rf /var/lib/apt/lists/* \
   && gem install docsplit \
-  && bin/pip install python-ldap -r requirements.txt \
+  && bin/pip install "python-ldap==2.4.15" -r requirements.txt \
   && chmod +x /plone/docker-entrypoint.sh
 
 USER imio
