Pin python-ldap == 2.4.15 for pip

--- a/docker-dev.cfg
+++ b/docker-dev.cfg
@@ -16,11 +16,13 @@ zope-conf-additional =
   </product-config>
   ${zope-conf:additional}
   ${zope-conf:zamqp}
-
 eggs +=
     imio.prometheus
+    collective.big.bang
+
 zcml +=
     imio.prometheus
+    collective.big.bang
 
 [instance-async]
 debug-mode = off
@@ -44,9 +46,5 @@ zope-conf-additional =
   </clock-server>
   ${zope-conf:zamqp}
 
-eggs +=
-    imio.prometheus
-    collective.big.bang
-zcml +=
-    imio.prometheus
-    collective.big.bang
+[versions]
+collective.big.bang = 1.0a2
