--- a/docker/Dockerfile-ubuntu-20.04
+++ b/docker/Dockerfile-ubuntu-20.04
@@ -6,7 +6,6 @@ WORKDIR /plone
 USER root
 COPY --chown=imio docker/zint-2.10.0-src.tar.gz /home/imio/
 COPY --chown=imio *.cfg *.conf requirements.txt Makefile /plone/
-
 RUN add-apt-repository -yu ppa:libreoffice/libreoffice-still \
   && apt-get full-upgrade -qqy \
   && apt-get install -qqy --no-install-recommends \
@@ -33,7 +32,7 @@ RUN add-apt-repository -yu ppa:libreoffice/libreoffice-still \
      lbzip2 \
      librsvg2-bin\
      libsigc++-2.0-0v5 \
-  && apt-get purge libreoffice-gnome libreoffice-gtk* libreoffice-help* libreoffice-kde* \
+  && apt-get purge -qqy libreoffice-gnome libreoffice-gtk* libreoffice-help* libreoffice-kde* \
   && buildDeps="build-essential \
                 python-dev-is-python2 \
                 cmake \
@@ -78,12 +77,12 @@ RUN add-apt-repository -yu ppa:libreoffice/libreoffice-still \
   && echo "    ldap.cfg" >> buildout.cfg \
   && echo "    docker.cfg" >> buildout.cfg \
   && su -c "virtualenv -p python2 ." -s /bin/sh imio \
-  && su -c "bin/pip install python-ldap -r requirements.txt" -s /bin/sh imio \
+  && su -c "bin/pip install 'python-ldap==2.4.15' -r requirements.txt" -s /bin/sh imio \
   && su -c "bin/buildout -t 30 -N" -s /bin/sh imio \
   && rm -rf develop-eggs/ src/ var/blobstorage/ var/filestorage/
 
 FROM imiobe/plone-base:4.3.20-ubuntu
-ENV DELIB_MAJOR=4.2
+ENV DELIB_MAJOR=4.1
 
 LABEL delib=$DELIB_VERSION \
       name="ia.Delib" \
@@ -129,7 +128,7 @@ RUN add-apt-repository -yu ppa:libreoffice/libreoffice-still \
   && apt-get purge libreoffice-gnome libreoffice-gtk* libreoffice-help* libreoffice-kde* \
   && rm -rf /var/lib/apt/lists/* \
   && gem install docsplit \
-  && bin/pip install python-ldap -r requirements.txt \
+  && bin/pip install "python-ldap==2.4.15" -r requirements.txt \
   && chmod +x /plone/docker-entrypoint.sh
 
 USER imio
